# procedural-play

./: .gitignore  .gitmodules  CMakeLists.txt
src/: SWshading.c  SWshading.layout  tnm084_lab1.c  triangleSoup.c
